add --enable-preview for jenkins